--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       /*document.getElementById("userId").innerHTML = 'ID: ' + profile.getId();*/
       document.getElementById("username").innerHTML = 'Name: ' + profile.getName();
       document.getElementById("profilePicture").setAttribute("src", profile.getImageUrl());
-      document.getElementById("emailAdress").innerHTML = 'Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+      document.getElementById("emailAdress").innerHTML = 'Email: ' + profile.getEmail(); // This is null if the 'email' scope is not present.
     }
   </script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
