--- a/other-page/index.html
+++ b/other-page/index.html
@@ -2,6 +2,8 @@
   <html lang=en>
     <head>
       <title>Some other page</title>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta name="google-signin-client_id" content="503242149682-hihrvbnlppr06k34267ifklv4nhahucr.apps.googleusercontent.com">
     </head>
     <body>
