--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <button class="btn btn-outline-success my-2 my-sm-0 hide-if-logged" id="signIn" data-onsuccess="onSignIn">Sign in</button>
+      <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged g-signin2" id="signIn" data-onsuccess="onSignIn">Sign in</div>
+      <div class="btn btn-outline-success my-2 my-sm-0 show-if-logged"><a href="#" onclick="signOut()">Sign out</a></div>
     </form>
   </div>
 </nav>
