--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged" id="signIn" data-onsuccess="onSignIn">Sign in</div>
+      <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged g-signin2" id="signIn" data-onsuccess="onSignIn">Sign in</div>
     </form>
     <li class="nav-item dropdown show-if-logged">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
