--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </form>
     <li class="nav-item dropdown show-if-logged">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img id="profilePicture">
+          <img style="width=25px; height=25px;" id="profilePicture">
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="https://oskar-codes.github.io/account">My account</a>
