--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     </form>
     <li class="nav-item dropdown show-if-logged">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img style="width=25px; height=25px;" id="profilePicture">
+          <img style="width=10px; height=10px;" id="profilePicture"></img>
+          <p id="username"></p>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="https://oskar-codes.github.io/account">My account</a>
@@ -45,7 +46,7 @@
   
   <div id="signIn" class="g-signin2 hide-if-logged" data-onsuccess="onSignIn"></div>
   <p id="isLoggedIn">You are not logged in.</p>
-  <p id="username" class="show-if-logged"></p>
+  <!--<p id="username" class="show-if-logged"></p>-->
   <p id=emailAdress class="show-if-logged"></p>
   <!--<img id="profilePicture" class="show-if-logged"></img>-->
   <a href="#" class="show-if-logged" onclick="signOut();">Sign out</a>
