--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
     </form>
     <li class="nav-item dropdown show-if-logged">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <img style="width=10px; height=10px;" id="profilePicture"></img>
-          <p id="username"></p>
+          <div class="nav-item inline">
+            <p id="username"></p>
+            <img style="width=10px; height=10px;" id="profilePicture"></img>
+          </div>
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="https://oskar-codes.github.io/account">My account</a>
