--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </style>
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#">Google login test</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -32,8 +32,8 @@
     </form>
     <li class="nav-item dropdown show-if-logged">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="nav-item container">
-            <p class="nav-text" id="username"></p>
+          <div class="nav-item container form-inline">
+            <p style="display: inline;" class="nav-text" id="username"></p>
             <img style="width=10px; height=10px;" id="profilePicture"></img>
           </div>
         </a>
@@ -46,12 +46,12 @@
   </div>
 </nav>
   
-  <div id="signIn" class="g-signin2 hide-if-logged" data-onsuccess="onSignIn"></div>
+  <!--<div id="signIn" class="g-signin2 hide-if-logged" data-onsuccess="onSignIn"></div>
   <p id="isLoggedIn">You are not logged in.</p>
-  <!--<p id="username" class="show-if-logged"></p>-->
+  <p id="username" class="show-if-logged"></p>
   <p id=emailAdress class="show-if-logged"></p>
-  <!--<img id="profilePicture" class="show-if-logged"></img>-->
-  <a href="#" class="show-if-logged" onclick="signOut();">Sign out</a>
+  <img id="profilePicture" class="show-if-logged"></img>
+  <a href="#" class="show-if-logged" onclick="signOut();">Sign out</a>-->
   <script>
     function signOut() {
       var auth2 = gapi.auth2.getAuthInstance();
