--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </form>
     <li class="nav-item dropdown show-if-logged">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <div class="nav-item container form-inline">
-            <p style="display: inline;" class="nav-text" id="username"></p>
+          <div class="show-if-logged nav-item container form-inline">
+            <p style="display: inline;" class="show-if-logged nav-text" id="username"></p>
             <img style="width=10px; height=10px;" id="profilePicture"></img>
           </div>
         </a>
