--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged g-signin2" id="signIn" data-onsuccess="onSignIn">Sign in</div>
     </form>
     <li class="nav-item dropdown show-if-logged">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="nav-link dropdown-toggle show-if-logged" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="show-if-logged nav-item container form-inline">
             <p style="display: inline;" class="show-if-logged nav-text" id="username"></p>
             <img style="width=10px; height=10px;" id="profilePicture"></img>
@@ -45,7 +45,11 @@
       </li>
   </div>
 </nav>
-  
+  <div class="container">
+    <h3 class="header">Google login test</h3>
+    <p class="description">This is a test of Google's login system.</p>
+    <p id="isLoggedIn">You are not logged in</p>
+  </div>
   <!--<div id="signIn" class="g-signin2 hide-if-logged" data-onsuccess="onSignIn"></div>
   <p id="isLoggedIn">You are not logged in.</p>
   <p id="username" class="show-if-logged"></p>
