--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
     <form class="form-inline my-2 my-lg-0">
       <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged g-signin2" id="signIn" data-onsuccess="onSignIn">Sign in</div>
     </form>
-    <li class="nav-item dropdown show-if-logged">
+    <li class="show-if-logged nav-item dropdown">
+        <a id="username" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+    <!--<li class="nav-item dropdown show-if-logged">
         <a class="nav-link dropdown-toggle show-if-logged" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <div class="show-if-logged nav-item container form-inline">
             <p style="display: inline;" class="show-if-logged nav-text" id="username"></p>
@@ -42,7 +53,7 @@
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" onclick="signOut()" href="#">Sign out</a>
         </div>
-      </li>
+      </li>-->
   </div>
 </nav>
   <div class="container">
