--- a/index.html
+++ b/index.html
@@ -30,15 +30,13 @@
     <form class="form-inline my-2 my-lg-0">
       <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged g-signin2" id="signIn" data-onsuccess="onSignIn">Sign in</div>
     </form>
-    <li class="show-if-logged nav-item dropdown">
+      <li class="show-if-logged nav-item dropdown">
         <a id="username" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="/account">Account</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="#" onclick="signOut()">Sign out</a>
         </div>
       </li>
     <!--<li class="nav-item dropdown show-if-logged">
