--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <a id="username" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/account">Account</a>
+          <a class="dropdown-item" href="https://oskar-codes.github.io/Google-Login/account">Account</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#" onclick="signOut()">Sign out</a>
         </div>
