--- a/account/index.html
+++ b/account/index.html
@@ -10,6 +10,10 @@
     .hide {
       display: none;
     }
+    
+    .container {
+      margin: 30px;
+    }
   </style>
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
