--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     .container {
       margin: 30px;
     }
+    
+    .active {
+      border-bottom: 1px solid black;
+    }
   </style>
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
