--- a/account/index.html
+++ b/account/index.html
@@ -51,11 +51,11 @@
 </nav>
   <div class="container">
     <h1 class="header">Account</h1>
-    <h3 class="header" class="username"></h3>
+    <h3 class="header show-if-logged" class="username"></h3>
     <p class="description">This is the account page.</p>
-    <img style="float: right;" class="profilePicture"></img>
+    <img style="float: right;" class="show-if-logged profilePicture"></img>
     <p id="isLoggedIn">You are not logged in</p>
-    <p class="email"></p>
+    <p>Your email adress is: </p><p class="show-if-logged email"></p>
   </div>
   <!--<div id="signIn" class="g-signin2 hide-if-logged" data-onsuccess="onSignIn"></div>
   <p id="isLoggedIn">You are not logged in.</p>
