--- a/account/index.html
+++ b/account/index.html
@@ -55,7 +55,7 @@
     <p class="description">This is the account page.</p>
     <img style="float: right;" class="show-if-logged profilePicture"></img>
     <p id="isLoggedIn">You are not logged in</p>
-    <p>Your email adress is: </p><p class="show-if-logged email"></p>
+    <p class="show-if-logged">Your email adress is: </p><p style="display: inline;" class="show-if-logged email"></p>
   </div>
   <!--<div id="signIn" class="g-signin2 hide-if-logged" data-onsuccess="onSignIn"></div>
   <p id="isLoggedIn">You are not logged in.</p>
