--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged"><a href="#" data-onsuccess="onSignIn">Sign in</a></div><!-- g-signin2 -->
+        <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged g-signin2" data-onsuccess="onSignIn"Sign in</div>
       </form>
       <li class="show-if-logged nav-item dropdown">
         <a class="username nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
