--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>Google login test</title>
+  <title>About - Google login test</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="google-signin-client_id" content="503242149682-hihrvbnlppr06k34267ifklv4nhahucr.apps.googleusercontent.com">
@@ -28,10 +28,10 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="https://oskar-codes.github.io/Google-Login">Home<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link" href="https://oskar-codes.github.io/Google-Login/about">About</a>
       </li>
     </ul>
@@ -49,9 +49,11 @@
       </li>
   </div>
 </nav>
+  
   <div class="container">
-    <h1 class="header">About</h3>
+    <h3 class="header">About</h3>
     <p class="description">This is a test of Google's login system.</p>
+    <p id="isLoggedIn">You are not logged in</p>
   </div>
   
   <script>
