--- a/account/index.html
+++ b/account/index.html
@@ -56,7 +56,7 @@
     <img style="float: right;" class="show-if-logged profilePicture"></img>
     <p id="isLoggedIn">You are not logged in</p>
     <p class="show-if-logged">Your email adress is: </p>
-    <p style="display: inline;" class="show-if-logged email"></p>
+    <p class="show-if-logged email"></p>
   </div>
 
   <script>
