--- a/account/index.html
+++ b/account/index.html
@@ -41,8 +41,8 @@
       <li class="show-if-logged nav-item dropdown">
         <a class="username nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="https://oskar-codes.github.io/Google-Login/account">Account</a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item active" href="https://oskar-codes.github.io/Google-Login/account">Account</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#" onclick="signOut()">Sign out</a>
         </div>
