--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged g-signin2" id="signIn" data-onsuccess="onSignIn">Sign in</div>
+      <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged g-signin2" id="signIn" data-theme="dark" data-onsuccess="onSignIn">Sign in</div>
     </form>
       <li class="show-if-logged nav-item dropdown">
         <a class="username nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
