--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
         <a class="nav-link" href="https://oskar-codes.github.io/Google-Login/about">About</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
+    <!--<form class="form-inline my-2 my-lg-0">-->
       <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged g-signin2" data-theme="dark" id="signIn" data-onsuccess="onSignIn">Sign in</div>
-    </form>
+    <!--</form>-->
       <li class="show-if-logged nav-item dropdown">
-        <!-- nav-link -->
-        <a class="username nav-item dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="username nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="https://oskar-codes.github.io/Google-Login/account">Account</a>
