--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <a class="nav-link" href="https://oskar-codes.github.io/Google-Login/about">About</a>
       </li>
     </ul>
-    <!--<form class="form-inline my-2 my-lg-0">-->
-      <div class="btn btn-outline-success my-2 my-sm-0 hide-if-logged g-signin2" data-theme="dark" id="signIn" data-onsuccess="onSignIn">Sign in</div>
-    <!--</form>-->
+    <form class="form-inline my-2 my-lg-0"><!-- btn-outline-success -->
+      <div class="btn my-2 my-sm-0 hide-if-logged g-signin2" data-theme="dark" id="signIn" data-onsuccess="onSignIn">Sign in</div>
+    </form>
       <li class="show-if-logged nav-item dropdown">
         <a class="username nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         </a>
