--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a class="nav-link" href="https://oskar-codes.github.io/Google-Login/about">About</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0"><!-- btn-outline-success -->
+    <form class="form-inline my-2 my-lg-0">
       <div class="btn my-2 my-sm-0 hide-if-logged g-signin2" data-theme="dark" id="signIn" data-onsuccess="onSignIn">Sign in</div>
     </form>
       <li class="show-if-logged nav-item dropdown">
