--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
   </div>
   
   <script>
+    window.onload = function() {
+      updateLoggedIn();
+    };
+    
     function signOut() {
       var auth2 = gapi.auth2.getAuthInstance();
        auth2.signOut().then(function () {
