--- a/account/index.html
+++ b/account/index.html
@@ -60,6 +60,10 @@
   </div>
 
   <script>
+    window.onload = function() {
+      updateLoggedIn();
+    };
+    
     function signOut() {
       var auth2 = gapi.auth2.getAuthInstance();
        auth2.signOut().then(function () {
