--- a/about/index.html
+++ b/about/index.html
@@ -38,7 +38,7 @@
     <form class="form-inline my-2 my-lg-0">
       <div class="btn my-2 my-sm-0 hide-if-logged g-signin2" id="signIn" data-theme="dark" data-onsuccess="onSignIn">Sign in</div>
     </form>
-      <li class="show-if-logged nav-item dropdown">
+      <li style="list-style-type: none;" class="show-if-logged nav-item dropdown">
         <a class="username btn btn-secondary dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
