--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="btn my-2 my-sm-0 hide-if-logged g-signin2" data-theme="dark" id="signIn" data-onsuccess="onSignIn">Sign in</div>
     </form>
       <li style="list-style-type: none;" class="show-if-logged nav-item dropdown">
-        <a class="username btn btn-primary dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <a class="username btn btn-light dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="https://oskar-codes.github.io/Google-Login/account">Account</a>
