--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
       margin: 30px;
     }
     
-    .active {
+    .navbar-nav>.active {
       border-bottom: 1px solid black;
+    }
+    
+    .dropdown-menu>.active>a,
+    .dropdown-menu>.active>a:hover,
+    .dropdown-menu>.active>a:focus{
+        background-color: #7dc290;
     }
   </style>
   
