--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
       margin: 30px;
     }
     
-    .active {
+    .navbar-nav>.active {
       border-bottom: 1px solid black;
     }
   </style>
