--- a/account/index.html
+++ b/account/index.html
@@ -19,10 +19,14 @@
       border-bottom: 1px solid black;
     }
     
-    .dropdown-menu>.active>a,
+    /*.dropdown-menu>.active>a,
     .dropdown-menu>.active>a:hover,
     .dropdown-menu>.active>a:focus{
         background-color: #7dc290;
+    }*/
+    
+    .dropdown-menu>.active {
+      background-color: #7dc290;
     }
   </style>
   
