--- a/account/index.html
+++ b/account/index.html
@@ -19,14 +19,8 @@
       border-bottom: 1px solid black;
     }
     
-    /*.dropdown-menu>.active>a,
-    .dropdown-menu>.active>a:hover,
-    .dropdown-menu>.active>a:focus{
-        background-color: #7dc290;
-    }*/
-    
     .dropdown-menu>.active {
-      background-color: #7dc290;
+      background-color: #343a40;
     }
   </style>
   
