--- a/account/index.html
+++ b/account/index.html
@@ -59,7 +59,7 @@
     <p class="description">This is the account page.</p>
     <img style="float: right;" class="show-if-logged profilePicture"></img>
     <p id="isLoggedIn">You are not logged in</p>
-    <p class="show-if-logged">Your email adress is: </p>
+    <p style="display: inline;" class="show-if-logged">Your email adress is: </p>
     <p style="display: inline;" class="show-if-logged email"></p>
   </div>
 
