--- a/account/index.html
+++ b/account/index.html
@@ -8,7 +8,7 @@
 <body>
   <style>
     .hide {
-      visibility: hidden;
+      display: none;
     }
     
     .container {
@@ -60,7 +60,7 @@
     <img style="float: right;" class="show-if-logged profilePicture"></img>
     <p id="isLoggedIn">You are not logged in</p>
     <p style="display: inline;" class="show-if-logged">Your email adress is: </p>
-    <p style="display: inline;" class="show-if-logged email"></p>
+    <p class="show-if-logged email"></p>
   </div>
 
   <script>
