--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h3 class="header">Google login test</h3>
     <p class="description">This is a test of Google's login system.</p>
     <p id="isLoggedIn">You are not logged in</p>
-    <p>Your Google accounts are listed below :</p><button onclick="listAccounts();">Refresh</button>
+    <p>Your Google accounts are listed below :</p><button class="btn btn-primary" onclick="listAccounts();">Refresh</button>
   </div>
   
   <script>
@@ -77,6 +77,7 @@
     }
     
     window.onload = function() {
+      listAccounts();
       updateLoggedIn();
     };
     
