--- a/index.html
+++ b/index.html
@@ -58,6 +58,34 @@
   </div>
   
   <script>
+    function listAccountUserLinks() {
+      var request = gapi.client.analytics.management.accountUserLinks.list({
+          'accountId': profile.getId();
+      });
+      request.execute(printAccountUserLinks);
+    }
+
+    function printAccountUserLinks(results) {
+      if (results && !results.error) {
+        var accountLinks = results.items;
+        for (var i = 0, accountUserLink; accountUserLink = accountLinks[i]; i++) {
+          var entity = accountUserLink.entity;
+          var accountRef = entity.accountRef;
+          var userRef = accountUserLink.userRef;
+          var permissions = accountUserLink.permissions;
+
+          console.log('Account User Link Id: ' + accountUserLink.id);
+          console.log('Account User Link Kind: ' + accountUserLink.kind);
+          console.log('User Email: ' + userRef.email);
+          console.log('Permissions effective: ' + permissions.effective);
+          console.log('Permissions local: ' + permissions.local);
+          console.log('Account Id: ' + accountRef.id);
+          console.log('Account Kind: ' + accountRef.kind);
+          console.log('Account Name: ' + accountRef.name);
+        }
+      }
+    }
+    
     function listAccounts() {
       var request = gapi.client.analytics.management.accounts.list();
       request.execute(printAccounts);
