--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h3 class="header">Google login test</h3>
     <p class="description">This is a test of Google's login system.</p>
     <p id="isLoggedIn">You are not logged in</p>
-    <p>Your Google accounts are listed below :</p><button class="btn btn-primary" onclick="listAccounts();">Refresh</button>
+    <p>Your Google accounts are listed below :</p><button class="btn btn-primary" onclick="listAccountUserLinks();">Refresh</button>
   </div>
   
   <script>
@@ -74,13 +74,13 @@
           var userRef = accountUserLink.userRef;
           var permissions = accountUserLink.permissions;
 
-          console.log('Account User Link Id: ' + accountUserLink.id);
+          /*console.log('Account User Link Id: ' + accountUserLink.id);
           console.log('Account User Link Kind: ' + accountUserLink.kind);
           console.log('User Email: ' + userRef.email);
           console.log('Permissions effective: ' + permissions.effective);
           console.log('Permissions local: ' + permissions.local);
           console.log('Account Id: ' + accountRef.id);
-          console.log('Account Kind: ' + accountRef.kind);
+          console.log('Account Kind: ' + accountRef.kind);*/
           console.log('Account Name: ' + accountRef.name);
         }
       }
@@ -105,7 +105,7 @@
     }
     
     window.onload = function() {
-      listAccounts();
+      listAccountUserLinks();
       updateLoggedIn();
     };
     
