--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 <head>
-  <title>About - Google login test</title>
+  <title>About - Google login test | Oskar Codes</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="google-signin-client_id" content="503242149682-hihrvbnlppr06k34267ifklv4nhahucr.apps.googleusercontent.com">
